--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
         }
     ],
     "require": {
-        "symfony/routing": "^4.1",
         "symfony/var-dumper": "^4.1",
-        "twig/twig": "^2.4"
+        "twig/twig": "^2.4",
+        "symfony/routing": "^4.1",
+        "symfony/http-foundation": "^4.1"
     },
     "autoload": {
         "psr-4": {
